test/analyze/name_resolution/traits/unresolved_type_error.myte
module test

type Foo (Int)

// Successfully resolved
methods Foo {}

// Does not exist
methods Bar {}

trait Trait {}
methods Trait {}

type alias Alias = Int
methods Alias {}

val x: Int = 1
methods x {}

fun main() {}